
- console moved from Window menu to project's window
- improved console with events list
- refactored the main menu bar
- improved drag and drop visual feedback (can now drop below or above a rule)
- improved auto-completion (different is inside a rule or defining a rule)
- new analysis strip displaying the location and kind of errors and warnings

- auto-indentation (enabled on ':', '|' and ';' characters)
- current line is now highlighted
- display line and column number in bottom status bar
- HOME/END key move to beginning/end of line
- can now navigate backward/forward
- rules have now icon in the tree view

- prefs: auto-save every n minutes
- prefs: syntax coloring parser delay
- prefs: can now specify the colors of each type of token in the debugger input text panel

- fixed a bug where a new document created on Windows would not be correctly colorized
- fixed several visual bugs on Windows and Linux

Version 1.0ea3 - 07/04/05

- compatible with ANTLR 3.0ea5

- fixed a bug where generating lexer/parser without saving the grammar to a file would fail
- fixed a bug where the first Look and Feel pop-up item could not be applied
- fixed a bug where error during code generation would not be reported
- fixed the bug where grammar file containing Windows new line (\r\n) would not be parsed correctly
   -> including associated features like copy, cut, colorization, rule selection, debugger location, etc.

Version 1.0ea2 - 06/12/05

- added a launch parameter to specify a file to open at startup ("-f /document/example.g")
- improved immediate colorization for comments and carriage returns
- console is hidden by default (can be changed in preferences)
- application is closed on Linux/Windows when the last project window is closed and an auxiliary window
  is still open (Console, Preferences or About dialog)
- fixed a bug where ANTLRWorks would quit on Windows/Linux if the last opened project was not found

Version 1.0ea1 - 06/01/05
